[gd_scene load_steps=26 format=3 uid="uid://y0x78wnou8oe"]

[ext_resource type="Script" path="res://scenes/ui/scripts/upgrade_panel.gd" id="1_e3evd"]
[ext_resource type="Texture2D" uid="uid://sr02oujf4h8" path="res://scenes/npcs/assets/spore.png" id="1_u22qe"]
[ext_resource type="Script" path="res://scenes/ui/scripts/upgrade_h_box_container.gd" id="2_saouf"]
[ext_resource type="FontFile" uid="uid://cyw4rphwc8a7k" path="res://scenes/ui/assets/fonts/Pixeled.ttf" id="3_373d2"]
[ext_resource type="Texture2D" uid="uid://puxwr8l38d52" path="res://scenes/items/weapons/contagions_orbit/smoke_07-sheet.png" id="3_mrcuu"]
[ext_resource type="Material" uid="uid://bdgfuaikq8cae" path="res://scenes/particles/contagion.tres" id="4_sfjok"]
[ext_resource type="FontFile" uid="uid://dki1nkh6typ54" path="res://scenes/ui/assets/fonts/VCR_OSD_MONO_1.001.ttf" id="5_c8ycf"]
[ext_resource type="Texture2D" uid="uid://baijrmxm40j1u" path="res://scenes/items/weapons/noxious_spread/fire_02.png" id="6_er654"]
[ext_resource type="Texture2D" uid="uid://bn3wed1endlt7" path="res://scenes/items/weapons/viral_discharge/scorch_01_short.png" id="6_n7hwx"]
[ext_resource type="Theme" uid="uid://cqg4ecycoya3h" path="res://scenes/ui/themes/upgrade_panel_container.tres" id="7_7boo1"]
[ext_resource type="Material" uid="uid://cexl8vw7dixv7" path="res://scenes/particles/discharge.tres" id="8_edqh4"]
[ext_resource type="AudioStream" uid="uid://hxrqlcsyci1v" path="res://scenes/sounds/sfx/upgrade-selected.wav" id="10_56npf"]
[ext_resource type="Material" uid="uid://cl1eodapl358g" path="res://scenes/particles/spread.tres" id="10_p6h86"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_sat4x"]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="LabelSettings" id="LabelSettings_7032t"]
resource_local_to_scene = true
line_spacing = 0.0
font = ExtResource("5_c8ycf")
font_size = 22
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.760784)

[sub_resource type="Theme" id="Theme_snex6"]
RichTextLabel/font_sizes/normal_font_size = 18
RichTextLabel/fonts/normal_font = ExtResource("5_c8ycf")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jf5kq"]
bg_color = Color(0.6, 0.6, 0.6, 0.529412)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tjjq3"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_dkt0w"]
particles_animation = true
particles_anim_h_frames = 2
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="LabelSettings" id="LabelSettings_f4dhd"]
resource_local_to_scene = true
line_spacing = 0.0
font = ExtResource("5_c8ycf")
font_size = 22
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.760784)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kv6cg"]
bg_color = Color(0.0687983, 0.0687983, 0.0687982, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 1

[sub_resource type="Theme" id="Theme_83uhv"]
Panel/styles/panel = SubResource("StyleBoxFlat_kv6cg")

[sub_resource type="LabelSettings" id="LabelSettings_vhc65"]
resource_local_to_scene = true
line_spacing = 0.0
font = ExtResource("5_c8ycf")
font_size = 22
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.760784)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5bqqw"]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color(0, 0, 0, 0.764706)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_blend = true

[sub_resource type="LabelSettings" id="LabelSettings_l7ubk"]
resource_local_to_scene = true
line_spacing = 0.0
font = ExtResource("3_373d2")
font_size = 26
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.760784)

[node name="UpgradePanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e3evd")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.898039)

[node name="MarginContainerRoot" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="MarginContainer" type="MarginContainer" parent="MarginContainerRoot"]
layout_mode = 2
theme_override_constants/margin_left = 125
theme_override_constants/margin_top = 125
theme_override_constants/margin_right = 125
theme_override_constants/margin_bottom = 125

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainerRoot/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 13
alignment = 1
script = ExtResource("2_saouf")

[node name="UpgradeOne" type="PanelContainer" parent="MarginContainerRoot/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme = ExtResource("7_7boo1")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainerRoot/MarginContainer/HBoxContainer/UpgradeOne"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainerRoot/MarginContainer/HBoxContainer/UpgradeOne/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Control" type="Panel" parent="MarginContainerRoot/MarginContainer/HBoxContainer/UpgradeOne/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2

[node name="GPUParticles2D" type="GPUParticles2D" parent="MarginContainerRoot/MarginContainer/HBoxContainer/UpgradeOne/MarginContainer/VBoxContainer/Control"]
material = SubResource("CanvasItemMaterial_sat4x")
position = Vector2(0, -7.5)
amount = 50
process_material = ExtResource("4_sfjok")
texture = ExtResource("3_mrcuu")
lifetime = 2.0
local_coords = true

[node name="TextureRect" type="TextureRect" parent="MarginContainerRoot/MarginContainer/HBoxContainer/UpgradeOne/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("1_u22qe")
expand_mode = 5

[node name="Title" type="Label" parent="MarginContainerRoot/MarginContainer/HBoxContainer/UpgradeOne/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Contagion's Orbit"
label_settings = SubResource("LabelSettings_7032t")
horizontal_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainerRoot/MarginContainer/HBoxContainer/UpgradeOne/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_snex6")
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "- 256 to 261 damage"
fit_content = true

[node name="Selection" type="Button" parent="MarginContainerRoot/MarginContainer/HBoxContainer/UpgradeOne"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_jf5kq")
theme_override_styles/normal = SubResource("StyleBoxEmpty_tjjq3")

[node name="UpgradeTwo" type="PanelContainer" parent="MarginContainerRoot/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("7_7boo1")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainerRoot/MarginContainer/HBoxContainer/UpgradeTwo"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainerRoot/MarginContainer/HBoxContainer/UpgradeTwo/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Control" type="Panel" parent="MarginContainerRoot/MarginContainer/HBoxContainer/UpgradeTwo/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
theme = ExtResource("7_7boo1")

[node name="GPUParticles2D" type="GPUParticles2D" parent="MarginContainerRoot/MarginContainer/HBoxContainer/UpgradeTwo/MarginContainer/VBoxContainer/Control"]
material = SubResource("CanvasItemMaterial_dkt0w")
amount = 50
process_material = ExtResource("8_edqh4")
texture = ExtResource("6_n7hwx")
lifetime = 0.1
explosiveness = 0.2

[node name="TextureRect" type="TextureRect" parent="MarginContainerRoot/MarginContainer/HBoxContainer/UpgradeTwo/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("1_u22qe")
expand_mode = 5

[node name="Title" type="Label" parent="MarginContainerRoot/MarginContainer/HBoxContainer/UpgradeTwo/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Viral Discharge"
label_settings = SubResource("LabelSettings_f4dhd")
horizontal_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainerRoot/MarginContainer/HBoxContainer/UpgradeTwo/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_snex6")
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "- 256 to 261 damage"
fit_content = true

[node name="Selection" type="Button" parent="MarginContainerRoot/MarginContainer/HBoxContainer/UpgradeTwo"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_jf5kq")
theme_override_styles/normal = SubResource("StyleBoxEmpty_tjjq3")

[node name="UpgradeThree" type="PanelContainer" parent="MarginContainerRoot/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("7_7boo1")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainerRoot/MarginContainer/HBoxContainer/UpgradeThree"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainerRoot/MarginContainer/HBoxContainer/UpgradeThree/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Control" type="Panel" parent="MarginContainerRoot/MarginContainer/HBoxContainer/UpgradeThree/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
theme = SubResource("Theme_83uhv")

[node name="GPUParticles2D" type="GPUParticles2D" parent="MarginContainerRoot/MarginContainer/HBoxContainer/UpgradeThree/MarginContainer/VBoxContainer/Control"]
amount = 100
process_material = ExtResource("10_p6h86")
texture = ExtResource("6_er654")
lifetime = 0.4
explosiveness = 0.2

[node name="TextureRect" type="TextureRect" parent="MarginContainerRoot/MarginContainer/HBoxContainer/UpgradeThree/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("1_u22qe")
expand_mode = 5

[node name="Title" type="Label" parent="MarginContainerRoot/MarginContainer/HBoxContainer/UpgradeThree/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Noxious Spread"
label_settings = SubResource("LabelSettings_vhc65")
horizontal_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainerRoot/MarginContainer/HBoxContainer/UpgradeThree/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_snex6")
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "- 256 to 261 damage"
fit_content = true

[node name="Selection" type="Button" parent="MarginContainerRoot/MarginContainer/HBoxContainer/UpgradeThree"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_jf5kq")
theme_override_styles/normal = SubResource("StyleBoxEmpty_tjjq3")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -225.5
offset_top = 50.0
offset_right = 225.5
offset_bottom = 150.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5bqqw")

[node name="Choose An upgrade" type="Label" parent="PanelContainer"]
layout_mode = 2
text = "PICK A MUTATION"
label_settings = SubResource("LabelSettings_l7ubk")
horizontal_alignment = 1
uppercase = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("10_56npf")
bus = &"SFX"
